Fixed a bug in the code that presents the start again button.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       const submitBtn = document.createElement('button');
       submitBtn.type = 'button';
-      submitBtn.id = "Submit"
+      submitBtn.id = "submitBtn"
       submitBtn.textContent = 'Submit';
       submitBtn.onclick = evaluateQuiz;
       form.appendChild(submitBtn);
